# wordle

./: .gitignore  CMakeLists.txt  DESIGN.md  NEW_DESIGN.md  PLAN.md  README.md  TODO.md  benchmark.py  feedback_cache.cpp  feedback_cache.h  lookup_generator.cpp  lookup_generator.h  opening_second_guesses.txt  opening_table.h  solver.cpp  solver_core.cpp  solver_core.h  solver_main.cpp  solver_runtime.cpp  solver_runtime.h  solver_types.h  test_subset.txt  word_lists.h  words_data.cpp  words_data.h
tools/: dump_lookup.py  generate_lookup.py  generate_tables.py  profile_generator.py
